--- a/retail_sales.ipynb
+++ b/retail_sales.ipynb
@@ -5,11 +5,11 @@
    "id": "8834548a-7d86-48e0-aef2-bd0e8561762c",
    "metadata": {},
    "source": [
-    "# SQL Portfolio Project – Retail Store Analysis\n",
+    "# SQL Portfolio Project – Retail Sales Analysis\n",
     "\n",
     "This notebook is a SQL portfolio project created to demonstrate my ability to write clear and correct SQL queries for data exploration and analysis.\n",
     "\n",
-    "The analysis is performed on a retail store dataset and focuses on:\n",
+    "The analysis is performed on a retail sales dataset and focuses on:\n",
     "\n",
     "- Selecting and filtering data\n",
     "\n",
